--- a/style.css
+++ b/style.css
@@ -21,10 +21,13 @@ html,
 body {
     width: 100%;
     height: 100%;
+   
 }
 
 body {
     background-color: var(--cor-azul);
+    overflow-y: scroll; 
+    overflow-x: hidden;
 }
 
 #cabecalho {
